--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-scrollbar-size": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwind-scrollbar": "^3.0.5",
+    "tailwindcss": "^3.4.1"
   }
 }
